Updated tests to reflect new column rank, and handle testing around synced_at data

--- a/models/spotify.yml
+++ b/models/spotify.yml
@@ -9,136 +9,259 @@ sources:
       - name: user_top_tracks_st_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: user_top_tracks_mt_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: user_top_tracks_lt_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: user_top_artists_st_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Artist ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: user_top_artists_mt_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Artist ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: user_top_artists_lt_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Artist ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: global_top_tracks_daily_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: global_top_tracks_weekly_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
       - name: global_viral_tracks_daily_stream
         columns:
           - name: id
-            description: Primary key of the table
+            description: Track ID
             tests:
-              - unique
+              - not_null
+          - name: rank
+            description: Rank of the returned record
+            tests:
+              - not_null
+          - name: synced_at
+            description: Timestamp of when the record was synced
+            tests:
               - not_null
 models:
   - name: user_top_tracks_short_term
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: user_top_tracks_medium_term
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: user_top_tracks_long_term
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: global_viral_tracks_daily
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: global_top_tracks_daily
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: global_top_tracks_weekly
     columns:
       - name: track_id
+        description: Track ID
         tests:
           - unique
           - not_null
       - name: artist_name
+        description: String of artist(s) names
         tests:
+          - not_null
+      - name: rank
+        description: Rank of the returned record
+        tests:
+          - unique
           - not_null
   - name: user_top_artists_short_term
     columns:
       - name: artist_id
+        description: Artist ID
+        tests:
+          - unique
+          - not_null
+      - name: rank
+        description: Rank of the returned record
         tests:
           - unique
           - not_null
   - name: user_top_artists_medium_term
     columns:
       - name: artist_id
+        description: Artist ID
+        tests:
+          - unique
+          - not_null
+      - name: rank
+        description: Rank of the returned record
         tests:
           - unique
           - not_null
   - name: user_top_artists_long_term
     columns:
       - name: artist_id
+        description: Artist ID
+        tests:
+          - unique
+          - not_null
+      - name: rank
+        description: Rank of the returned record
         tests:
           - unique
           - not_null
