Updated models to work with snowflake alongside postgres. Updated dbt yml files for source and models

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,4 +21,4 @@ models:
       materialized: table
 
 vars:
-  schema: "{{ env_var('DBT_TARGET_SCHEMA') }}" # the schema where the raw Spotify tables are located
+  schema: "{{ env_var('DBT_TARGET_SCHEMA') }}"
