--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,12 +5,12 @@ config-version: 2
 
 profile: local
 
-source-paths: ["models"]
+model-paths: ["models"]
 analysis-paths: ["analysis"]
 target-path: "target"
 clean-targets: ["target"]
 test-paths: ["tests"]
-data-paths: ["data"]
+seed-paths: ["data"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
